2010-03-03  Frank Warmerdam  <warmerdam@pobox.com>

	* src/*: fix a variety of warnings when -Wall is used.  Mostly 
	unused variables, and use of assignment results in an if statement
	without extra brackets. 

	* src/*: treat most grid shift errors as not-transient, with the
	exception of not having a grid shift file for the area of interest.
	This is done by adding a new error code for no grid shift file for
	target area.  Also ensure that cs2cs reports pj_transform() errors
	via emess so we have a chance of seeing the error message.
	
2010-02-28  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c, src/pj_transform.c: added support for +axis setting
	to control axis orientation (#18).

	* nad/epsg: Regenerated from EPSG 7.4.1 with the big datum selection
	upgrade.

2010-02-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_omerc.c: wholesale update from libproj4.3 (20081120) (#62)

2010-01-25  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_mutex.c: avoid conflict between pthread and win32 mutex
	implementations on unix-like build environments on windows. (#56)

	* src/pj_init,src/projects.h,src/pj_transform.c,nad/testvarious:
	Correct seriously broken +lon_wrap implementation.  (#62)

	* src/pj_mutex.c: fix creation of mutex on win32 to be in
	unacquired state in pj_init_lock to avoid an extra reference. (#63)

2009-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/ntf_r93.gsb: updated with file from IGN (#52).

	* docs/*: files moved out of source tree (still in svn)

2009-09-29  Frank Warmerdam  <warmerdam@pobox.com>

	* nmake.opt: Update so that various items can be externally 
	overridden (#54).

2009-09-24  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: add ntv2 and ignf testing if grid shift files
	are available.

2009-09-23  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing for 4.7.0 release.

	* nad/makefile.vc: do not attempt to install ntf_r93.gsb by default.
